@@ -290,6 +290,22 @@ def _evaluate_functions(session, model, functions):
     return dict(zip(funcnames, evaluated))
 
 
+def require_json_content_type(func):
+    """Decorator function which checks that all requests must be have
+    ``Content-Type: application/json``.
+
+    Requests that do not have the ``Content-Type: application/json`` header
+    result in a :http:statuscode:`400` response.
+
+    """
+    def check_content_type(*args, **kw):
+        if request.headers['Content-Type'] != 'application/json':
+            message = 'Content-Type header must be application/json.'
+            return jsonify_status_code(400, message=message)
+        return func(*args, **kw)
+    return check_content_type
+
+
 class ModelView(MethodView):
     """Base class for :class:`flask.MethodView` classes which represent a view
     of a SQLAlchemy model.
@@ -300,6 +316,10 @@ class ModelView(MethodView):
     :attr:`session` attribute.
 
     """
+
+    #: Applies the :func:`require_json_content_type` decorator to each of the
+    #: view functions in this class.
+    decorators = [require_json_content_type]
 
     def __init__(self, session, model, *args, **kw):
         """Calls the constructor of the superclass and specifies the model for
