@@ -13,6 +13,8 @@ Version 0.5
 
 Not yet released.
 
+- Requests that don't have ``Content-Type: application/json`` will cause a
+  :http:statuscode:`400` response.
 - Added capturing of exceptions raised during field validation.
 - Use Flask's :attr:`flask.Request.json` to parse incoming JSON requests.
 - Added :file:`examples/separate_endpoints.py`, showing how to create separate
